# PalautusrepositoriTEKA3003

./: README.md
osa2/nhl-statistics-1/: .coverage
osa2/nhl-statistics-1/src/: player_reader.py
osa2/nhl-statistics-1/src/tests/: statistics_service_test.py
osa2/poetry-web/: poetry-web.code-workspace  pyproject.toml
osa2/poetry-web/src/: index.py
osa2/project-reader/: pyproject.toml
osa2/project-reader/src/: index.py  project.py  project_reader.py
osa3/hello-robot/: log.html  output.xml  report.html
osa3/login-robot/: log.html  output.xml  report.html
osa3/login-robot/src/: AppLibrary.py
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot  resource.robot
osa4/: retro.md
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
