[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Joonas Paasovaara",email = "paajooni@jyu.fi"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "flask (>=3.1.2,<4.0.0)",
]
