[tool.poetry]
name = "project-reader"
version = "0.1.0"
description = "Reads your projects ;)"
authors = ["Joonas"]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "toml (>=0.10.2,<0.11.0)"
]
