[tool.poetry]
name = "Ohtutesting app"
version = "0.1.0"
description = "Sovellus joka toimii testisyötteenä ohtun osan 2 laskareihin"
license = MIT
authors = ["Matti Luukkainen", "Kalle Ilves"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.11.1,<8.0.0)",
    "robotframework (>=7.3.2,<8.0.0)",
    "robotframework-seleniumlibrary (>=6.8.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)"
    
]
